SERVER-57756 Remove ScopedBlockSessionCheckouts which is now unnecessary and causing race with concurrent stepdowns.